--- a/navisow-ui/src/app/app.component.html
+++ b/navisow-ui/src/app/app.component.html
@@ -1,1 +1,12 @@
+<!-- 
+<app-custom-stepper>
+    <cdk-step>
+        <p>This is any content of "Step 1"</p>
+    </cdk-step>
+    <cdk-step>
+        <p>This is any content of "Step 2"</p>
+    </cdk-step>
+</app-custom-stepper>
+-->
+
 <router-outlet></router-outlet>
